# structureMonitoring

./: .gitignore
backend/: poetry.toml  pyproject.toml
backend/app/: main.py
backend/app/reports/: eventEQR.py
backend/app/utils/seismic/: eqr.py
backend/temp/: EQR120-2022-12-12_18-41-34.csv
